# pypubpub

./: .env.example  .gitignore  ABSTRACT_EXTRACTION_STATUS.md  AGENTS.md  AUTOMATION_COMPLETE.md  AUTOMATION_STATUS.md  CLAUDE.md  DEPLOYMENT_CHECKLIST.md  PDF_REFERENCES_REMOVED.md  README.md  REORGANIZATION_PLAN.md  REPEC_DEPLOYMENT_SUMMARY.md  REPOSITORY_ORGANIZED.md  delete_untitled_pubs.py  pyproject.toml  requirements.txt
.claude/: settings.local.json
docs/: ADDING_EVALUATION_TO_PACKAGE.md  AUTOMATION_GUIDE.md  AUTOMATION_WORKFLOW.md  CODA_SETUP.md  CODA_WORKFLOW.md  FIXING_BACKSLASHES_GUIDE.md  INSTITUTIONAL_PRESENCE_PLAN.md  QUICKSTART_CODA.md  QUICKSTART_FIX_BACKSLASHES.md  README_LINK_FIXES.md  REPEC_DEPLOYMENT.md  SETUP_SUMMARY.md
docs/archive/: ABSTRACT_ENRICHMENT_GUIDE.md  FINAL_DEPLOYMENT_READY.md  GOOGLE_SCHOLAR_ANALYSIS.md  REPEC_ENRICHED_READY.md  REPEC_UPDATE_SUMMARY.md
notebooks/: README.md  V6_V7_process_and_automation.ipynb  tryingpubpubapi.ipynb  tryingpubpubapi.py  v6_v7_process_and_automation.py
production_work/: create_eval_packages1.py
pypub/: __init__.py
pypubpub/: Pubv6.py  __init__.py  utils.py
pypubpub/repec/: __init__.py
repec_rdfs/: eval2024_01.rdf  eval2024_02.rdf  eval2024_03.rdf  eval2025_01.rdf  eval2025_02.rdf  eval2025_03.rdf  eval2025_04.rdf  eval_07_2023.rdf  notes_to_adjust_in_repec_rdf.txt  repec_feb25.rdf.txt  repec_rdf_wip.rdf
scripts/: README.md  README_REPEC.md  clean_repec_rdf.py  deploy_repec_rdf.sh  deploy_repec_simple.sh  enhance_rdf_with_abstracts.py  enrich_repec_abstracts.py  generate_and_deploy_repec.py  remove_pdf_refs.py  update_repec.sh
tests/: conf_settings_template.py
unjournalpubpub_production_moved/: .gitignore  CLAUDE.md  clean_out_evals.py  create_eval_01.py  readme.md  scrapepubpub_attempt.py
(+72 files in other folders)
