[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pypub"
authors = [{name = "Nesim S", email = "contact@unjournal.org"}]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
	"requests >=2.6",
	"pycryptodome >=3.20",		
]

[project.urls]
Home = "https://unjournal.pubpub.org/"




