[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pypubpub"
authors = [{name = "Nesim S", email = "contact@unjournal.org"}]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
	"requests >=2.6",
	"pycryptodome >=3.20",		
]

[project.optional-dependencies]
dev = [
    "pytest >=3.0",
]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[project.urls]
Home = "https://unjournal.pubpub.org/"




